crates/keron-lang/tests/corpus/errors/parse/reconcile_block_empty.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: unexpected `}`, expected expression
  --> 1:13
  |
1 | reconcile { }
  |             ^
